Fixed horizontal scroll issues

--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,7 @@
     body { margin: 0; }
     header {
         position: fixed;
+        width: 100vw;
         inset: 0 0 auto 0;
         padding: 16px 50px 16px 60px;
         border: none;
@@ -498,6 +499,13 @@
     main:has(.hero) {
         padding-top: 0;
     }
+    
+    .horizontal-track {
+        padding: 20px 50px;
+        display: flex;
+        align-items: center;
+        height: 100%;
+    }
 
     .parallax-heading-move {
         position: relative;
@@ -620,10 +628,7 @@
         padding: 0 !important;
     }
     section.horizontal-container {
-        display: flex;
-        width: 100%;
         height: 100vh;
-        padding: 20px 0;
         overflow: hidden;
     }
 }
@@ -907,9 +912,7 @@ section.blue {
 
 /* GalleryView UI */
 .ui-gallery-view {
-    flex: 0 0 45vw;
-    width: 100vw;
-    height: 100vh;
+    flex: 0 0 100vw;
     padding: 20px 0;
 }
 
@@ -998,6 +1001,10 @@ section.blue {
     .info-box p {
         overflow: hidden;
         font-size: 16px;
+    }
+    .ui-entrance-index {
+        max-width: none;
+        align-self: flex-start;
     }
     .footer-heading {
         transform: none;
